test/Fail/SafeFlagPragmas.agda
{-# OPTIONS --allow-unsolved-metas
            --no-positivity-check
            --no-termination-check
            --type-in-type
            --sized-types
            --injective-type-constructors
            --experimental-irrelevance #-}
module SafeFlagPragmas where
