test/Fail/SafeFlagPragmas.err
SafeFlagPragmas.agda:1.1-7.43: error: [SafeFlagPragma]
The --safe mode does not allow OPTIONS pragmas
--allow-unsolved-metas
--experimental-irrelevance
--injective-type-constructors
--no-positivity-check
--no-termination-check
--sized-types
--type-in-type
